--- a/dev/less/main.less
+++ b/dev/less/main.less
@@ -9,4 +9,5 @@
 @import "_texto-home.less";
 @import "_diferenciais-pousada.less";
 @import "_suites-home.less";
+@import "_facilidades-pousada.less";
 @import "_rodape-principal.less";
