--- a/dev/less/main.less
+++ b/dev/less/main.less
@@ -7,7 +7,9 @@
 @import "_header-principal.less";
 @import "_banner-principal.less";
 @import "_texto-home.less";
+@import "_texto-sobre.less";
 @import "_diferenciais-pousada.less";
 @import "_suites-home.less";
 @import "_facilidades-pousada.less";
+@import "_nossas-promocoes.less";
 @import "_rodape-principal.less";
