--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -238,8 +238,6 @@ input:focus {
   color: #fff;
 }
 .menu-principal-mobile {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   width: 100%;
   height: 120px;
@@ -285,8 +283,6 @@ input:focus {
   }
 }
 .menu-principal nav {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   max-width: 1200px;
   height: 100%;
@@ -300,8 +296,6 @@ input:focus {
   clear: both;
 }
 .menu-principal nav > header {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   width: 100%;
   height: 120px;
@@ -356,9 +350,6 @@ input:focus {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: -webkit-translate(-50%, -50%);
-    transform: -moz-translate(-50%, -50%);
-    transform: -o-translate(-50%, -50%);
     transform: translate(-50%, -50%);
   }
 }
@@ -519,9 +510,6 @@ input:focus {
     position: absolute;
     top: 50%;
     right: 0;
-    transform: -webkit-translateY(-50%);
-    transform: -moz-translateY(-50%);
-    transform: -o-translateY(-50%);
     transform: translateY(-50%);
   }
 }
@@ -556,8 +544,6 @@ input:focus {
   vertical-align: middle;
 }
 .header-principal {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   padding: 10px;
 }
@@ -609,12 +595,17 @@ input:focus {
   }
 }
 .banner-principal {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
-  background-image: url(../../assets/images/loader.gif);
   background-repeat: no-repeat;
   background-position: center;
+}
+.banner-principal.home {
+  background-image: url(../../assets/images/loader.gif);
+}
+.banner-principal.sobre {
+  background-image: url(../../assets/images/foto-interior-pousada-voce-que-sabe.jpg);
+  background-size: cover;
+  background-attachment: fixed;
 }
 .texto-home {
   margin: 10px;
@@ -653,14 +644,48 @@ input:focus {
     max-width: 70%;
   }
 }
+.texto-sobre {
+  margin: 10px;
+  padding: 20px;
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+}
+@media (min-width: 62em) {
+  .texto-sobre {
+    padding: 40px;
+  }
+}
+.texto-sobre > p {
+  width: 90%;
+  max-width: 90%;
+  text-align: center;
+  line-height: 120%;
+  margin: 10px auto 0;
+}
+.texto-sobre > p:first-child {
+  margin-top: 0;
+}
+@media (min-width: 30em) {
+  .texto-sobre > p {
+    font-size: 18px;
+  }
+}
+@media (min-width: 48em) {
+  .texto-sobre > p {
+    font-size: 20px;
+  }
+}
+@media (min-width: 62em) {
+  .texto-sobre > p {
+    line-height: 150%;
+    width: 70%;
+    max-width: 70%;
+  }
+}
 .diferenciais-pousada {
   background-image: url('../../assets/images/suites/brilhante/suite-brilhante-pousada-voce-que-sabe-01.jpg');
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: scroll;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
   background-size: cover;
   padding: 30px;
 }
@@ -920,8 +945,6 @@ input:focus {
   clear: both;
 }
 .suites-home > ul li a {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   display: block;
   width: 45%;
@@ -1124,8 +1147,6 @@ input:focus {
   }
 }
 .facilidades-pousada > .facilidades > ul {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   width: 50%;
   float: left;
@@ -1298,9 +1319,131 @@ input:focus {
     font-size: 16px;
   }
 }
+.nossas-promocoes {
+  background-image: url('../../assets/images/suites/brilhante/suite-brilhante-pousada-voce-que-sabe-01.jpg');
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: scroll;
+  background-size: cover;
+  padding: 30px;
+}
+@media (min-width: 30em) {
+  .nossas-promocoes {
+    padding: 50px;
+  }
+}
+@media (min-width: 48em) {
+  .nossas-promocoes {
+    padding: 100px;
+  }
+}
+@media (min-width: 62em) {
+  .nossas-promocoes {
+    padding: 150px;
+    background-attachment: fixed;
+  }
+}
+.nossas-promocoes > .promocoes {
+  max-width: 300px;
+  background-color: red;
+  padding: 10px;
+  border-radius: 10px;
+  margin: 0 auto;
+}
+@media (min-width: 30em) {
+  .nossas-promocoes > .promocoes {
+    padding: 20px;
+  }
+}
+@media (min-width: 62em) {
+  .nossas-promocoes > .promocoes {
+    padding: 30px;
+  }
+}
+.nossas-promocoes > .promocoes > h1 {
+  font-size: 18px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  text-align: center;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+}
+@media (min-width: 30em) {
+  .nossas-promocoes > .promocoes > h1 {
+    font-size: 20px;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+  }
+}
+@media (min-width: 48em) {
+  .nossas-promocoes > .promocoes > h1 {
+    font-size: 22px;
+  }
+}
+@media (min-width: 62em) {
+  .nossas-promocoes > .promocoes > h1 {
+    font-size: 24px;
+    margin-bottom: 30px;
+    padding-bottom: 30px;
+  }
+}
+@media (min-width: 75em) {
+  .nossas-promocoes > .promocoes > h1 {
+    font-size: 26px;
+  }
+}
+.nossas-promocoes > .promocoes > form {
+  margin-top: 10px;
+}
+@media (min-width: 30em) {
+  .nossas-promocoes > .promocoes > form {
+    margin-top: 20px;
+  }
+}
+@media (min-width: 62em) {
+  .nossas-promocoes > .promocoes > form {
+    margin-top: 30px;
+  }
+}
+.nossas-promocoes > .promocoes > form > label {
+  display: block;
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-bottom: 5px;
+}
+.nossas-promocoes > .promocoes > form > input {
+  box-sizing: border-box;
+  display: block;
+  width: 100%;
+  height: 40px;
+  border-radius: 5px;
+  border-style: none;
+  padding: 0 10px;
+  margin-bottom: 10px;
+}
+@media (min-width: 30em) {
+  .nossas-promocoes > .promocoes > form > input {
+    margin-bottom: 20px;
+  }
+}
+@media (min-width: 62em) {
+  .nossas-promocoes > .promocoes > form > input {
+    margin-bottom: 30px;
+  }
+}
+.nossas-promocoes > .promocoes > form > button {
+  display: block;
+  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0);
+  border-style: none;
+  text-transform: uppercase;
+  color: #fff;
+  margin: 0 auto;
+  font-size: 18px;
+}
 .rodape-principal {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   padding: 10px;
   text-align: center;
