--- a/dev/less/main.less
+++ b/dev/less/main.less
@@ -12,4 +12,5 @@
 @import "_suites-home.less";
 @import "_facilidades-pousada.less";
 @import "_nossas-promocoes.less";
+@import "_nossos-contatos.less";
 @import "_rodape-principal.less";
