--- a/dev/less/main.less
+++ b/dev/less/main.less
@@ -4,6 +4,7 @@
 @import "_icons.less";
 @import "_mixins.less";
 @import "_menu-principal.less";
+@import "_menu-rodape.less";
 @import "_header-principal.less";
 @import "_banner-principal.less";
 @import "_texto-home.less";
