--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -543,6 +543,51 @@ input:focus {
   text-align: center;
   vertical-align: middle;
 }
+.menu-rodape {
+  background-color: #fff;
+  padding: 20px 10px 0;
+}
+@media (min-width: 62em) {
+  .menu-rodape {
+    display: none;
+  }
+}
+.menu-rodape > nav {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  padding-bottom: 20px;
+}
+.menu-rodape > nav:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.menu-rodape > nav > ul:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.menu-rodape > nav > ul > li > a {
+  box-sizing: border-box;
+  color: #1a1a1a;
+  float: left;
+  font-size: 9px;
+  padding: 0 5px;
+  text-align: center;
+}
+.menu-rodape > nav > ul > li > a.ativo {
+  color: red;
+}
+@media (min-width: 30em) {
+  .menu-rodape > nav > ul > li > a {
+    width: 20%;
+    font-size: 10px;
+  }
+}
+@media (min-width: 48em) {
+  .menu-rodape > nav > ul > li > a {
+    font-size: 12px;
+  }
+}
 .header-principal {
   box-sizing: border-box;
   padding: 10px;
