--- a/dev/less/_nossos-contatos.less
+++ b/dev/less/_nossos-contatos.less
@@ -12,6 +12,21 @@
 		padding: 30px;
 	});
 
+	&.localizacao {
+		> h1 {
+			display: none;
+		}
+		> .contatos {
+			border-top: 1px solid rgba(255, 255, 255, .2);
+			padding-top: 20px;
+
+			> .blocos {
+				&.gps {
+					top: 20px;
+				}
+			}
+		}
+	}
 	> h1 {
 		font-size: 18px;
 		text-transform: uppercase;
