--- a/dev/less/_banner-principal.less
+++ b/dev/less/_banner-principal.less
@@ -9,6 +9,10 @@
 	&.sobre {
 		background-image: url(../../assets/images/foto-interior-pousada-voce-que-sabe.jpg);
 		background-size: cover;
-		background-attachment: fixed;
+		background-attachment: scroll;
+
+		.desktop({
+			background-attachment: fixed;
+		});
 	}
 }
