--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -1529,8 +1529,6 @@ input:focus {
 }
 .nossos-contatos.localizacao > .contatos {
   padding-top: 20px;
-  max-width: 1000px;
-  margin: 0 auto;
 }
 .nossos-contatos.localizacao > .contatos > .blocos.gps {
   top: 20px;
@@ -1569,6 +1567,13 @@ input:focus {
 }
 .nossos-contatos > .contatos {
   position: relative;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+.nossos-contatos > .contatos:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 .nossos-contatos > .contatos > .blocos {
   width: 100%;
