--- a/dev/less/_nossos-contatos.less
+++ b/dev/less/_nossos-contatos.less
@@ -16,8 +16,6 @@
 		}
 		> .contatos {
 			padding-top: 20px;
-			max-width: 1000px;
-			margin: 0 auto;
 
 			> .blocos {
 				&.gps {
@@ -52,7 +50,10 @@
 		});
 	}
 	> .contatos {
+		.clearfix;
 		position: relative;
+		max-width: 1000px;
+		margin: 0 auto;
 
 		> .blocos {
 			.clearfix;
