--- a/dev/less/main.less
+++ b/dev/less/main.less
@@ -1,4 +1,5 @@
 @import "./../../vendor/eric-mayer-reset-less-sass/reset.less";
+@import "./../../vendor/magnific-popup/dist/magnific-popup.css";
 @import "_estrutura.less";
 @import "_colors.less";
 @import "_icons.less";
