--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -3,6 +3,7 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+@import "../../vendor/magnific-popup/dist/magnific-popup.css";
 html,
 body,
 div,
@@ -141,6 +142,7 @@ strong {
 a {
   color: inherit;
   text-decoration: none;
+  outline: none;
 }
 textarea:focus,
 input:focus {
