--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -1213,18 +1213,9 @@ input:focus {
   background-repeat: no-repeat;
   background-position: center;
 }
-.banner-principal.home {
-  background-image: url(../../assets/images/loader.gif);
-}
+.banner-principal.home,
 .banner-principal.sobre {
-  background-image: url(../../assets/images/foto-interior-pousada-voce-que-sabe.jpg);
-  background-size: cover;
-  background-attachment: scroll;
-}
-@media (min-width: 62em) {
-  .banner-principal.sobre {
-    background-attachment: fixed;
-  }
+  background-image: url(../../assets/images/loader.gif);
 }
 .texto-home {
   margin: 10px;
