--- a/dev/less/_banner-principal.less
+++ b/dev/less/_banner-principal.less
@@ -3,16 +3,8 @@
 	background-repeat: no-repeat;
 	background-position: center;
 
-	&.home {
-		background-image: url(../../assets/images/loader.gif);
-	}
+	&.home,
 	&.sobre {
-		background-image: url(../../assets/images/foto-interior-pousada-voce-que-sabe.jpg);
-		background-size: cover;
-		background-attachment: scroll;
-
-		.desktop({
-			background-attachment: fixed;
-		});
+		background-image: url(../../assets/images/loader.gif);
 	}
 }
