--- a/dev/less/_facilidades-pousada.less
+++ b/dev/less/_facilidades-pousada.less
@@ -75,6 +75,9 @@
 					});
 
 					> .icone {
+						&.higiene {
+							.icon(@icon-higiene);
+						}
 						&.seguranca {
 							.icon(@icon-seguranca);
 						}
