--- a/dev/less/main.less
+++ b/dev/less/main.less
@@ -1,5 +1,6 @@
 @import "./../../vendor/eric-mayer-reset-less-sass/reset.less";
 @import (less) "./../../vendor/vegas/dist/vegas.css";
+@import "./../../vendor/jquery-colorbox/example3/colorbox.css";
 @import "_estrutura.less";
 @import "_colors.less";
 @import "_icons.less";
@@ -16,3 +17,4 @@
 @import "_nossas-promocoes.less";
 @import "_nossos-contatos.less";
 @import "_rodape-principal.less";
+@import "_modal.less";
