--- a/dev/less/_icons.less
+++ b/dev/less/_icons.less
@@ -2,15 +2,20 @@
 
 @font-face {
     font-family: 'pousada-icons';
-    src: url('./../../assets/icons/pousada.eot?5fvy3s');
-    src: url('./../../assets/icons/pousada.eot?5fvy3s#iefix') format('embedded-opentype'),
-         url('./../../assets/icons/pousada.ttf?5fvy3s') format('truetype'),
-         url('./../../assets/icons/pousada.woff?5fvy3s') format('woff'),
-         url('./../../assets/icons/pousada.svg?5fvy3s#remoto-icons') format('svg');
+    src: url('./../../assets/icons/pousada.eot?rhbho2');
+    src: url('./../../assets/icons/pousada.eot?rhbho2#iefix') format('embedded-opentype'),
+         url('./../../assets/icons/pousada.ttf?rhbho2') format('truetype'),
+         url('./../../assets/icons/pousada.woff?rhbho2') format('woff'),
+         url('./../../assets/icons/pousada.svg?rhbho2#remoto-icons') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
+@icon-higiene: "\e90c";
+@icon-oriental: "\e91a";
+@icon-home: "\e917";
+@icon-promocoes: "\e918";
+@icon-suites: "\e919";
 @icon-ar: "\e900";
 @icon-arrow: "\e901";
 @icon-car: "\e902";
@@ -23,7 +28,6 @@
 @icon-instagram: "\e909";
 @icon-map: "\e90a";
 @icon-massagem: "\e90b";
-@icon-oriental: "\e90c";
 @icon-relogio: "\e90d";
 @icon-seguranca: "\e90e";
 @icon-sinuca: "\e90f";
@@ -34,9 +38,6 @@
 @icon-waze: "\e914";
 @icon-whatsapp: "\e915";
 @icon-wifi: "\e916";
-@icon-home: "\e917";
-@icon-promocoes: "\e918";
-@icon-suites: "\e919";
 
 .icon-content(@content) {
   &::before {
