--- a/dev/less/main.less
+++ b/dev/less/main.less
@@ -1,6 +1,6 @@
 @import "./../../vendor/eric-mayer-reset-less-sass/reset.less";
 @import (less) "./../../vendor/vegas/dist/vegas.css";
-@import "./../../vendor/jquery-colorbox/example3/colorbox.css";
+@import (less) "./../../vendor/jquery-colorbox/example3/colorbox.css";
 @import "_estrutura.less";
 @import "_colors.less";
 @import "_icons.less";
