--- a/dev/less/_banner-principal.less
+++ b/dev/less/_banner-principal.less
@@ -7,4 +7,17 @@
 	&.sobre {
 		background-image: url(../../assets/images/loader.gif);
 	}
+	&.localizacao {
+		position: relative;
+		width: 100%;
+
+		> .overlay {
+			background: transparent; 
+		  position: absolute; 
+		  top: 0;
+		  left: 0;
+		  bottom: 0;
+		  right: 0;
+		}
+	}
 }
