--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -1396,6 +1396,18 @@ input:focus {
 .banner-principal.sobre {
   background-image: url(../../assets/images/loader.gif);
 }
+.banner-principal.localizacao {
+  position: relative;
+  width: 100%;
+}
+.banner-principal.localizacao > .overlay {
+  background: transparent;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
 .texto-home {
   margin: 10px;
   padding: 20px;
