--- a/dev/less/_suites-pousada.less
+++ b/dev/less/_suites-pousada.less
@@ -46,7 +46,6 @@
 						font-size: 20px;
 					});
         }
-
         &:before {
           content: "";
           display: block;
@@ -115,6 +114,7 @@
       }
       > .informacoes {
         padding: 20px;
+        text-align: center;
 
         .tablet({
           padding: 40px;
@@ -134,7 +134,6 @@
           padding-bottom: 10px;
           margin-bottom: 10px;
           text-transform: uppercase;
-          text-align: center;
 
           .tablet({
             font-size: 22px;
@@ -173,6 +172,7 @@
         > .preco {
           display: block;
           margin-bottom: 20px;
+          color: @cor-logo;
 
           .mobile({
 						font-size: 16px;
