--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -3157,6 +3157,48 @@ input:focus {
 .suites-pousada ul li > .imagem.diamante {
   background-image: url("../../assets/images/suites/Diamante/thumb-landscape-suite-diamante-pousada-voce-que-sabe.jpg");
 }
+.suites-pousada ul li > .imagem.diamante-13 {
+  background-image: url("../../assets/images/suites/Diamante/Suíte-13/Foto-suíte-13-diamanete-perspectiva-01.jpg");
+}
+.suites-pousada ul li > .imagem.diamante-14 {
+  background-image: url("../../assets/images/suites/Diamante/Suíte-14/Foto-suíte-14-diamanete-perspectiva-01.jpg");
+}
+.suites-pousada ul li > .imagem.diamante-16 {
+  background-image: url("../../assets/images/suites/Diamante/Suíte-16/Foto-suíte-16-diamanete-perspectiva-01.jpg");
+}
+.suites-pousada ul li > .imagem.diamante-21 {
+  background-image: url("../../assets/images/suites/Diamante/Suíte-21/foto-suíte-21-diamanete-perspectiva-01.jpg");
+}
+.suites-pousada ul li > .imagem.diamante-23 {
+  background-image: url("../../assets/images/suites/Diamante/Suíte-23/Foto-suíte-23-diamanete-perspectiva-01.jpg");
+}
+.suites-pousada ul li > .imagem.diamante-11 {
+  background-image: url("../../assets/images/suites/Diamante/Suíte-11/Foto-suíte-11-diamanete-perspectiva-01.jpg");
+}
+.suites-pousada ul li > .imagem.diamante-12 {
+  background-image: url("../../assets/images/suites/Diamante/Suíte-12/Foto-suíte-12-diamanete-perspectiva-01.jpg");
+}
+.suites-pousada ul li > .imagem.diamante-22 {
+  background-image: url("../../assets/images/suites/Diamante/Suíte-22/Foto-suíte-22-diamanete-perspectiva-01.jpg");
+}
+.suites-pousada ul li > .imagem.diamante-26 {
+  background-image: url("../../assets/images/suites/Diamante/Suíte-26/Foto-suíte-26-diamanete-perspectiva-01.jpg");
+}
+.suites-pousada ul li > .imagem.diamante-28 {
+  background-image: url("../../assets/images/suites/Diamante/Suíte-28/foto-suite-28-diamante-perspectiva-01.jpg");
+}
+.suites-pousada ul li > .imagem.diamante-29 {
+  background-image: url("../../assets/images/suites/Diamante/Suíte-29/foto-suite-29-diamante-perspectiva-01.jpg");
+}
+.suites-pousada ul li > .imagem.diamante-30 {
+  background-image: url("../../assets/images/suites/Diamante/Suíte-30/foto-suite-30-diamante-perspectiva-01.jpg");
+}
+.suites-pousada ul li > .imagem.diamante-31 {
+  background-image: url("../../assets/images/suites/Diamante/Suíte-31/foto-suite-31-diamante-perspectiva-01.jpg");
+}
+.suites-pousada ul li > .imagem.diamante-27 {
+  background-image: url("../../assets/images/suites/Diamante/Suíte-27/foto-suite-27-diamante-perspectiva-01.jpg");
+}
 .suites-pousada ul li > .imagem.ouro {
   background-image: url("../../assets/images/suites/Ouro/thumb-landscape-suite-ouro-pousada-voce-que-sabe.jpg");
 }
