--- a/dev/less/_suites-pousada.less
+++ b/dev/less/_suites-pousada.less
@@ -167,6 +167,12 @@
         &.ouro {
           background-image: url("../../assets/images/suites/Ouro/thumb-landscape-suite-ouro-pousada-voce-que-sabe.jpg");
         }
+        &.ouro-32 {
+          background-image: url("../../assets/images/suites/Ouro/Suíte-32/Foto-suíte-32-ouro-perspectiva-01.jpg");
+        }
+        &.ouro-33 {
+          background-image: url("../../assets/images/suites/Ouro/Suíte-33/Foto-suíte-33-ouro-perspectiva-01.jpg");
+        }
         &.prata {
           background-image: url("../../assets/images/suites/Prata/thumb-landscape-suite-prata-pousada-voce-que-sabe.jpg");
         }
