--- a/dev/less/_suites-pousada.less
+++ b/dev/less/_suites-pousada.less
@@ -176,6 +176,9 @@
         &.prata {
           background-image: url("../../assets/images/suites/Prata/thumb-landscape-suite-prata-pousada-voce-que-sabe.jpg");
         }
+        &.prata-01 {
+          background-image: url("../../assets/images/suites/Prata/foto-suíte-01-prata-perspectiva-01.jpg");
+        }
       }
       > .informacoes {
         padding: 20px;
