--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -3211,6 +3211,9 @@ input:focus {
 .suites-pousada ul li > .imagem.prata {
   background-image: url("../../assets/images/suites/Prata/thumb-landscape-suite-prata-pousada-voce-que-sabe.jpg");
 }
+.suites-pousada ul li > .imagem.prata-01 {
+  background-image: url("../../assets/images/suites/Prata/foto-suíte-01-prata-perspectiva-01.jpg");
+}
 .suites-pousada ul li > .informacoes {
   padding: 20px;
   text-align: center;
