--- a/dev/less/_suites-pousada.less
+++ b/dev/less/_suites-pousada.less
@@ -177,7 +177,7 @@
           background-image: url("../../assets/images/suites/Prata/thumb-landscape-suite-prata-pousada-voce-que-sabe.jpg");
         }
         &.prata-01 {
-          background-image: url("../../assets/images/suites/Prata/foto-suíte-01-prata-perspectiva-01.jpg");
+          background-image: url("../../assets/images/suites/Prata/foto-suíte-08-prata-perspectiva-01.jpg");
         }
       }
       > .informacoes {
@@ -226,6 +226,11 @@
 					.huge({
 						font-size: 16px;
 					});
+
+          > span {
+            .icon(@icon-coracao);
+            margin-right: 10px;
+          }
 
           &.suites {
             color: @cor-logo;
@@ -277,6 +282,9 @@
               &.periodos,
               &.pernoites {
                 margin-top: 0;
+              }
+              &.descricao {
+                width: 100%;
               }
             });
 
